# Stroustrup_Programming

./: .gitignore  README.md
1_Calculator_Chapter_6/: CMakeLists.txt  main.cpp
2_Token_chapter_6/: main.cpp
3_Chapter_6_Tasks/: main.cpp
4_Chapter_6_Exercises/10/: CMakeLists.txt  main.cpp
4_Chapter_6_Exercises/3/: main.cpp
4_Chapter_6_Exercises/4/: CMakeLists.txt
4_Chapter_6_Exercises/5/: main.cpp
4_Chapter_6_Exercises/6/: CMakeLists.txt  main.cpp
4_Chapter_6_Exercises/7/: CMakeLists.txt  Error.h  LogicGrammarRecognizer.cpp  LogicGrammarRecognizer.h  Token.h  TokenStream.cpp  TokenStream.h  TokenType.h  TokenTypeFromChar.cpp  TokenTypeFromChar.h  main.cpp
4_Chapter_6_Exercises/8/: CMakeLists.txt  main.cpp
4_Chapter_6_Exercises/9/: CMakeLists.txt
Chapter 6/2_Token/: CMakeLists.txt
Chapter 6/3_Exercises/10/: main.cpp
Chapter 6/3_Exercises/2/: main.cpp
Chapter 6/3_Exercises/7/: Error.h  Token.h  TokenTypeFromChar.cpp
Chapter 6/3_Exercises/9/: main.cpp
Chapter 6/4_Exercises/5/: CMakeLists.txt
Chapter_6/1_Examples/1_Calculator/: main.cpp
Chapter_6/1_Examples/2_Token/: main.cpp
Chapter_6/2_Tasks/: main.cpp
Chapter_6/3_Exercises/2/: main.cpp
Chapter_6/3_Exercises/3/: main.cpp
Chapter_6/3_Exercises/4/: main.cpp
Chapter_6/3_Exercises/5/: main.cpp
Chapter_6/3_Exercises/6/: main.cpp
Chapter_6/3_Exercises/8/: main.cpp
Chapter_7/1_Examples/: main.cpp
Chapter_7/1_Examples/1_Book_example/: CMakeLists.txt
Chapter_7/1_Examples/2_Improved_example/: CMakeLists.txt  Calculator.cpp  Calculator.h  Error.h  Grammar.cpp  Grammar.h  Token.h  TokenKind.h  TokenKinds.h  TokenStream.cpp  TokenStream.h  main.cpp
Chapter_7/2_Tasks/: Calculator.cpp  Calculator.h  Token.h  TokenKind.cpp  TokenKind.h  TokenStream.cpp  main.cpp
Chapter_7/3_Exercises/: Calculator.cpp  Calculator.h  Table.cpp  TokenKind.h  TokenStream.h  Variable.cpp  main.cpp
Chapter_7/3_Exercises/1/: CMakeLists.txt  Calculator.cpp  Calculator.h  Error.h  Table.h  Token.h  TokenKind.cpp  TokenKind.h  TokenStream.cpp  TokenStream.h  Variable.h  main.cpp
Chapter_8/1_Tasks/1/: use.cpp
Chapter_8/2_Exercises/1/: CMakeLists.txt  Calculator.cpp  Calculator.h  Error.h  Table.cpp  Table.h  TokenKind.h  TokenStream.cpp  TokenStream.h  Variable.h  main.cpp
Chapter_8/2_Exercises/10/: CMakeLists.txt  main.cpp
Chapter_8/2_Exercises/11/: CMakeLists.txt  main.cpp
Chapter_8/2_Exercises/12/: CMakeLists.txt  main.cpp
Chapter_8/2_Exercises/14/: CMakeLists.txt  main.cpp
Chapter_8/2_Exercises/2/: CMakeLists.txt  Print.cpp  Print.h  main.cpp
Chapter_8/2_Exercises/3/: CMakeLists.txt  Fibonacci.cpp  Fibonacci.h  main.cpp
Chapter_8/2_Exercises/4/: CMakeLists.txt  main.cpp
Chapter_8/2_Exercises/5/: CMakeLists.txt  Reverse.cpp  Reverse.h  main.cpp
Chapter_8/2_Exercises/6/: CMakeLists.txt  Reverse.cpp  Reverse.h  main.cpp
Chapter_8/2_Exercises/7/: CMakeLists.txt  main.cpp
Chapter_8/2_Exercises/8/: CMakeLists.txt  main.cpp  rand.cpp  rand.h  rand8.h
Chapter_8/2_Exercises/8-9/: CMakeLists.txt  main.cpp  rand.cpp  rand.h
Chapter_8/Tasks/1/: CMakeLists.txt  my.cpp
Chapter_8/Tasks/2/: CMakeLists.txt  main.cpp
Chapter_8/Tasks/3/: CMakeLists.txt  main.cpp
Chapter_9/1_Tasks/: CMakeLists.txt  Chrono.cpp  DateV1.cpp  DateV1.h  DateV2.h  main.cpp
Chapter_9/2_Exercises/2/: CMakeLists.txt  NamePairs.cpp  NamePairs.h  main.cpp
Chapter_9/2_Exercises/2_3/: NamePairs.cpp  NamePairs.h  main.cpp
Chapter_9/2_Exercises/3/: NamePairs.cpp  NamePairs.h  main.cpp
Chapter_9/2_Exercises/5-9/: Book.cpp  Book.h  CMakeLists.txt  Library.cpp  Library.h  Patron.cpp  Patron.h  Transaction.h  main.cpp
Chapter_9/Tasks/: CMakeLists.txt  Chrono.cpp  Chrono.h  DateV1.cpp  DateV1.h  DateV2.cpp  DateV2.h  Utils.h  main.cpp
